# Chatbot-demo

./: .gitignore  README.md  app.py  chatbot.py  env.example  pyproject.toml  requirements.txt  setup_env.sh  start.sh
attached_assets/: app.py  chatbot.py  index.html  pyproject.toml  routes.py  script.js  style.css
static/: script.js  style.css
templates/: index.html
